# python-project-49

./: .gitignore  Makefile  README.md  brain-calc.cast  brain-even.cast  brain-gcd.cast  brain-prime.cast  brain-progression.cast  demo.cast  demo.vid  pyproject.toml
brain_games/: engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
